# libwebrtc

./: .gitignore  BUILD.gn  README.md
.github/workflows/: webrtc-builds.yml
examples/wx_loop_back_demo/: CMakeLists.txt  Info.plist.in  README.md  embed_libwebrtc.cmake  main.cc
include/: rtc_frame_cryptor.h  rtc_peerconnection_factory.h  rtc_rtp_parameters.h  rtc_types.h
include/base/: portable.h
include/c/: lw_c_api.h
patches/: add_libwebrtc_build_target.patch  custom_audio_source_m144.patch
src/: rtc_audio_processing_impl.cc  rtc_data_channel_impl.cc  rtc_data_channel_impl.h  rtc_dummy_audio_source_impl.cc  rtc_dummy_video_capturer_impl.cc  rtc_media_stream_impl.cc  rtc_peerconnection_factory_impl.cc  rtc_peerconnection_factory_impl.h  rtc_peerconnection_impl.cc  rtc_rtp_parameters_impl.cc  rtc_video_frame_impl.cc  rtc_video_frame_impl.h  rtc_video_sink_adapter.cc  rtc_video_sink_adapter.h  rtc_video_source_impl.cc  rtc_video_source_impl.h  rtc_video_track_impl.cc  rtc_video_track_impl.h
src/c/: lw_c_api.cc  lw_datachannel.cc  lw_handle.cc  lw_handle.h  lw_negotiation.cc  lw_observer.cc  lw_peerconnection.cc  lw_string.cc  lw_string.h  lw_video_send.cc  lw_video_sink_registry.cc
src/internal/: dummy_audio_capturer.h  lw_native_video_frame_buffer.cc  lw_native_video_frame_buffer.h  video_capturer.h
src/interop/: rtc_frame_cryptor_interop.cc  rtc_peerconnection_interop.cc
test/: audio_data.test.cc  audio_device.test.cc  audio_processing.test.cc  audio_source.test.cc  base_atomicops.test.cc  base_fixed_size_function.test.cc  base_portable.test.cc  base_refcountedobject.test.cc  base_scoped_ref_ptr.test.cc  data_channel.test.cc  dtls_transport.test.cc  dtmf_sender.test.cc  dummy_audio_source.test.cc  frame_cryptor.test.cc  helper.test.cc  ice_candidate.test.cc  logging.test.cc  media_stream.test.cc  media_track.test.cc  mediaconstraints.test.cc  native_frame_e2e.cc  peerconnection.test.cc  peerconnection_factory.test.cc  rtp_capabilities.test.cc  rtp_parameters.test.cc  rtp_sender_receiver.test.cc  rtp_transceiver.test.cc  sdp_parse_error.test.cc  session_description.test.cc  video_device.test.cc  video_frame.test.cc
test/c_interop/: data_channel.test.cc  frame_cryptor.test.cc  ice_candidate.test.cc  key_provider.test.cc  logging.test.cc  media_stream.test.cc  peerconnection.test.cc  peerconnection_factory.test.cc  rtp_transceiver.test.cc  sdp_parse_error.test.cc  session_description.test.cc  stats.test.cc  video_device.test.cc  video_frame.test.cc
